<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ExistingOptionActivity">

        <TextView
            android:id="@+id/existing_header"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:fontFamily="@font/adamina"
            android:gravity="center"
            android:text="Search Existing Options"
            android:textColor="@color/main_text"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039" />

        <TableLayout
            android:id="@+id/existing_tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toStartOf="@+id/existing_linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/existing_call_price">

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/existing_name"
                    android:layout_width="@dimen/input_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/stock_name"
                    app:boxBackgroundColor="@color/input_background"
                    app:boxStrokeColor="@color/hint_stroke"
                    app:hintTextColor="@color/hint_stroke"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/existing_name_string"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_text"
                        android:textSize="@dimen/input_text_size"
                        android:inputType="text|textCapCharacters" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/existing_strikePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/strikePrice"
                    app:boxBackgroundColor="@color/input_background"
                    app:boxStrokeColor="@color/hint_stroke"
                    app:hintTextColor="@color/hint_stroke"
                    app:prefixText="@string/prefix_dollar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/existing_strike_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/main_text"
                        android:textSize="@dimen/input_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/existing_expiration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/expiration"
                    app:boxBackgroundColor="@color/input_background"
                    app:boxStrokeColor="@color/hint_stroke"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/calendar_foreground"
                    app:endIconMode="custom"
                    app:helperText="@string/expiration_hint"
                    app:hintTextColor="@color/hint_stroke">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/existing_expiration_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/main_text"
                        android:textSize="@dimen/input_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/existing_spotPrice"
                    android:layout_width="@dimen/input_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/spotPrice"
                    android:visibility="invisible"
                    app:boxBackgroundColor="@color/disabled_input_background"
                    app:boxStrokeColor="@color/hint_stroke"
                    app:hintTextColor="@color/hint_stroke"
                    app:prefixText="@string/prefix_dollar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/existing_spot_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:enabled="false"
                        android:textColor="@color/main_text"
                        android:textSize="@dimen/input_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/existing_volatility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/volatility"
                    android:visibility="invisible"
                    app:boxBackgroundColor="@color/disabled_input_background"
                    app:boxStrokeColor="@color/hint_stroke"
                    app:hintTextColor="@color/hint_stroke"
                    app:suffixText="@string/suffix_percent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/existing_vol_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:enabled="false"
                        android:textColor="@color/main_text"
                        android:textSize="@dimen/input_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/existing_rfRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/rfRate"
                    android:visibility="invisible"
                    app:boxBackgroundColor="@color/disabled_input_background"
                    app:boxStrokeColor="@color/hint_stroke"
                    app:hintTextColor="@color/hint_stroke"
                    app:suffixText="@string/suffix_percent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/existing_rfRate_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:enabled="false"
                        android:textColor="@color/main_text"
                        android:textSize="@dimen/input_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/existing_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="26dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/existing_tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/existing_call_price">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/existing_calculate"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:layout_marginTop="10dp"
                android:background="@color/button_background"
                android:onClick="onCalculateButtonClick_Existing"
                android:text="@string/calculate"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/input_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/existing_clear"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:layout_marginTop="15dp"
                android:background="@color/button_background"
                android:onClick="onClearButtonClick_Existing"
                android:text="@string/clear"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/input_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/existing_save"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:layout_marginTop="15dp"
                android:background="@color/button_background"
                android:onClick="onSaveButtonClick_Existing"
                android:text="@string/save"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/input_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/existing_saved_list"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:layout_marginTop="15dp"
                android:background="@color/button_background"
                android:onClick="sendToSavedList"
                android:text="@string/saved_list"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/input_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/existing_toCalculator"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:layout_marginTop="15dp"
                android:background="@color/button_background"
                android:onClick="sendToCalculator"
                android:text="@string/back_to_calculator"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/input_text_size" />


        </LinearLayout>

        <TextView
            android:id="@+id/existing_callLabel"
            android:layout_width="156dp"
            android:layout_height="52dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/callLabel"
            android:textColor="@color/put_call_label"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/existing_putLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/existing_header" />

        <TextView
            android:id="@+id/existing_putLabel"
            android:layout_width="156dp"
            android:layout_height="52dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/putLabel"
            android:textColor="@color/put_call_label"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/existing_callLabel"
            app:layout_constraintTop_toBottomOf="@+id/existing_header" />

        <TextView
            android:id="@+id/existing_call_price"
            android:layout_width="156dp"
            android:layout_height="43dp"
            android:gravity="center"
            android:textColor="@color/put_call_text"
            android:textSize="@dimen/call_put_text_size"
            android:text="@string/option_placeholders"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/existing_put_price"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/existing_callLabel" />

        <TextView
            android:id="@+id/existing_put_price"
            android:layout_width="156dp"
            android:layout_height="43dp"
            android:gravity="center"
            android:textColor="@color/put_call_text"
            android:textSize="@dimen/call_put_text_size"
            android:text="@string/option_placeholders"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/existing_call_price"
            app:layout_constraintTop_toBottomOf="@+id/existing_putLabel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>