<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:fontFamily="@font/adamina"
            android:gravity="center"
            android:text="@string/header"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/spotPrice"
                    android:layout_width="@dimen/input_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/spotPrice"
                    app:boxBackgroundColor="@color/input_background_color"
                    app:boxStrokeColor="@color/box_stroke"
                    app:hintTextColor="@color/hint_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:prefixText="@string/prefix_dollar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/spot_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/input_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/strikePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/strikePrice"
                    app:boxBackgroundColor="@color/input_background_color"
                    app:boxStrokeColor="@color/box_stroke"
                    app:hintTextColor="@color/hint_color"
                    app:prefixText="@string/prefix_dollar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/strike_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/input_text_size"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/volatility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/volatility"
                    app:boxBackgroundColor="@color/input_background_color"
                    app:boxStrokeColor="@color/box_stroke"
                    app:hintTextColor="@color/hint_color"
                    app:suffixText="@string/suffix_percent" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/vol_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:inputType="number"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/input_text_size"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rfRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/rfRate"
                    app:boxBackgroundColor="@color/input_background_color"
                    app:boxStrokeColor="@color/box_stroke"
                    app:hintTextColor="@color/hint_color"
                    app:suffixText="@string/suffix_percent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rfRate_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/input_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/expiration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin_start"
                    android:hint="@string/expiration"
                    app:boxBackgroundColor="@color/input_background_color"
                    app:boxStrokeColor="@color/box_stroke"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/calendar_foreground"
                    app:endIconMode="custom"
                    app:hintTextColor="@color/hint_color"
                    app:helperText="@string/expiration_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/expiration_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:inputType="number"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/input_text_size"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="272dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="26dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tableLayout"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculate"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:layout_marginTop="20dp"
                android:background="@color/button_color"
                android:onClick="calculate"
                android:text="@string/calculate"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/input_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:layout_marginTop="30dp"
                android:background="@color/button_color"
                android:onClick="clear"
                android:text="@string/clear"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/input_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:layout_marginTop="30dp"
                android:background="@color/button_color"
                android:text="@string/save"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/input_text_size" />


        </LinearLayout>

        <TextView
            android:id="@+id/callLabel"
            android:layout_width="156dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/callLabel"
            android:textColor="@color/call_color"
            android:textSize="30sp"

            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/putLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <TextView
            android:id="@+id/putLabel"
            android:layout_width="156dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/putLabel"
            android:textColor="@color/put_color"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/callLabel"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <TextView
            android:id="@+id/call_price"
            android:layout_width="156dp"
            android:layout_height="43dp"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/put_price"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/callLabel" />

        <TextView
            android:id="@+id/put_price"
            android:layout_width="156dp"
            android:layout_height="43dp"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/call_price"
            app:layout_constraintTop_toBottomOf="@+id/putLabel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>